--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,7 +44,9 @@
         <div class="image-box">
           <img src="images\techiseverywhere.jpg" alt="" />
           <div class="first-page-text">
-            <h1>The effects of Information Technologies<br/>on modern world</h1>
+            <h1>
+              The effects of Information Technologies<br />on modern world
+            </h1>
             <p>
               The drawbacks and advantages of IT development and Impact on
               environment
@@ -60,7 +68,10 @@
             activities. Whether you are storing, retrieving, accessing or
             manipulating information, IT greatly impacts our everyday lives.
           </p>
-          <a href="https://emeritus.org/in/learn/what-is-information-technology/"><button class="read-more">READ MORE</button></a>
+          <a
+            href="https://emeritus.org/in/learn/what-is-information-technology/"
+            ><button class="read-more">READ MORE</button></a
+          >
         </div>
       </section>
       <section class="third-section">
@@ -165,12 +176,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/diylora.jpg"/>
+                <img src="images/team/diylora.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Dilyora Bozorova</h1>
+                <h1 style="font-size: 40px">Dilyora Bozorova</h1>
                 <h1>Group Manager</h1>
-                <i class="material-icons" style="font-size: 60px; color: aquamarine;">manage_accounts</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: aquamarine"
+                  >manage_accounts</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -180,12 +195,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/diyora.jpg"/>
+                <img src="images/team/diyora.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Diyora Baxtiyorava</h1>
+                <h1 style="font-size: 40px">Diyora Baxtiyorava</h1>
                 <h1>Researcher</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(146, 182, 255);">search</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(146, 182, 255)"
+                  >search</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -195,12 +214,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/ibraxim.jpg"/>
+                <img src="images/team/ibraxim.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Ibraxim Azimov</h1>
+                <h1 style="font-size: 40px">Ibraxim Azimov</h1>
                 <h1>Interviewer</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(172, 223, 159);">mic</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(172, 223, 159)"
+                  >mic</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -210,12 +233,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/Farrukh.jpg"/>
+                <img src="images/team/Farrukh.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Dadamuxamedov Farrux</h1>
+                <h1 style="font-size: 40px">Dadamuxamedov Farrux</h1>
                 <h1>Head Developer</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(146, 248, 255);">psychology</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(146, 248, 255)"
+                  >psychology</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -225,12 +252,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/gulbara.jpg"/>
+                <img src="images/team/gulbara.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Gulbara Begmatova</h1>
+                <h1 style="font-size: 40px">Gulbara Begmatova</h1>
                 <h1>Designer</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(246, 146, 255);">brush</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(246, 146, 255)"
+                  >brush</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -240,12 +271,16 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/Jasur.jpg"/>
+                <img src="images/team/Jasur.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Jasur Ahmedov</h1>
+                <h1 style="font-size: 40px">Jasur Ahmedov</h1>
                 <h1>Researcher</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(255, 213, 146);">person_search</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(255, 213, 146)"
+                  >person_search</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -255,19 +290,23 @@
           <div class="mySlides">
             <div class="container">
               <div class="img-container appear">
-                <img src="images/team/sevi.jpg"/>
+                <img src="images/team/sevi.jpg" />
               </div>
               <div class="text-container fade">
-                <h1 style="font-size: 40px;">Sevinch Ahmedova</h1>
+                <h1 style="font-size: 40px">Sevinch Ahmedova</h1>
                 <h1>Video Editor</h1>
-                <i class="material-icons" style="font-size: 60px; color: rgb(255, 146, 146);">video_library</i>
+                <i
+                  class="material-icons"
+                  style="font-size: 60px; color: rgb(255, 146, 146)"
+                  >video_library</i
+                >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
           </div>
           <!-- Dots -->
-          <div style="text-align:center">
+          <div style="text-align: center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -281,13 +320,33 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="inha-emblem"><a href="https://inha.uz/"><span class="inha-link"></span></a><object data="images/emblem.svg" type=""></object></div>
-        <div class="footer-text"><p>Academic English Project made by students of Inha University in Tashkent</p></div>
+        <div class="inha-emblem">
+          <a href="https://inha.uz/"><span class="inha-link"></span></a
+          ><object data="images/emblem.svg" type=""></object>
+        </div>
+        <div class="footer-text">
+          <p>
+            Academic English Project made by students of Inha University in
+            Tashkent
+          </p>
+        </div>
         <div class="social-media">
-          <span class="youtube-logo"><a href="https://www.youtube.com/@InhaUz"><i class="fa-brands fa-youtube" style="color: #f50000;"></i></a></span>
-          <span class="facebook"><a href="https://www.facebook.com/inha.uz"><i class="fa-brands fa-facebook" style="color: #0f4299;"></i></a></span>
-          <span class="telegram"><a href="https://t.me/inha_uz"><i class="fa-brands fa-telegram" style="color: #3a76df;"></i></a></span>
-          <span class="instagram"><a href="https://www.instagram.com/inha_tashkent/"><i class="fa-brands fa-instagram" style="color: #c837ac;"></i></a></span>
+          <span class="youtube-logo"
+            ><a href="https://www.youtube.com/@InhaUz"
+              ><i class="fa-brands fa-youtube" style="color: #f50000"></i></a
+          ></span>
+          <span class="facebook"
+            ><a href="https://www.facebook.com/inha.uz"
+              ><i class="fa-brands fa-facebook" style="color: #0f4299"></i></a
+          ></span>
+          <span class="telegram"
+            ><a href="https://t.me/inha_uz"
+              ><i class="fa-brands fa-telegram" style="color: #3a76df"></i></a
+          ></span>
+          <span class="instagram"
+            ><a href="https://www.instagram.com/inha_tashkent/"
+              ><i class="fa-brands fa-instagram" style="color: #c837ac"></i></a
+          ></span>
         </div>
       </div>
     </footer>
