benefits page added

--- a/benefits.html
+++ b/benefits.html
@@ -38,7 +38,7 @@
     <header>
       <div class="nav-bar">
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li class="active"><a href="">Benefits</a></li>
           <li><a href="">Drawbacks</a></li>
           <li><a href="">Solutions</a></li>
@@ -72,7 +72,6 @@
                 then you can easily replay it. That is the main advantage of
                 technology.
               </p>
-              <div class="blue-decor"></div>
             </div>
           </div>
         </div>
@@ -82,7 +81,7 @@
         <div class="second-page">
           <div class="container-1">
             <div class="first-line-container">
-              <div class="heading"><h1>Accessability</h1></div>
+              <div class="heading"><h1>ACCESS TO INFORMATION</h1></div>
             </div>
             <div class="number">02</div>
             <div class="main-text">
@@ -90,25 +89,170 @@
                 <img src="images/online-education.jpg" />
               </div>
               <p>
-                Education and learning methods have changed and made them more
-                engaging and helpful for the students. Students do not need to
-                attend physically in the classroom, they present the class
-                online. Because of online education, the gap between the lower
-                and upper countries has vanished. Moreover, the cost of online
-                learning is more cost-effective than physical attendance. For
-                that, anyone can afford it easily. If you take a class
-                physically and miss any important part of the lecture you can't
-                watch or listen again. However, whereas you take a course or
-                class which has the option of recording and you miss any part
-                then you can easily replay it. That is the main advantage of
-                technology.
+                The internet has significantly increased people's access to
+                information. Prior to the widespread availability of the
+                internet, people had to rely on more traditional sources of
+                information, such as books, newspapers, and television, which
+                were often limited in scope and availability. The internet has
+                made it possible for people to access a vast amount of
+                information from around the world, often at no cost. This has
+                allowed people to learn about a wide range of topics and to stay
+                informed about current events and developments in their fields
+                of interest. At the same time, the internet has also raised
+                concerns about the quality and reliability of the information
+                that is available online.
               </p>
-              <div class="blue-decor"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="third-page">
+          <div class="container-2">
+            <div class="number">03</div>
+            <div class="first-line-container">
+              <div class="heading"><h1>ONLINE PAYMENTS</h1></div>
+            </div>
+            <div class="main-text">
+              <p>
+                Online transactions provide convenience for both consumers and
+                business owners. This is because online transaction payment
+                systems such as BRIVA and Direct Debit allow an instant process
+                of payment verification. Consumers don't need to manually send
+                their proof of payment. So as a business owner, you don't have
+                to manually record it as well. This process can minimize errors
+                that may occur due to human error, such as incorrectly entering
+                buyer data or losing records due to damaged files. Instant
+                verification processes will certainly reduce the need for human
+                resources on your team, especially to do the bookkeeping
+                process. Thus, your work as a team will be easier. You can even
+                allocate your resources to other needs.
+              </p>
+              <div class="image-box">
+                <img src="images/online-education.jpg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="fourth-page">
+          <div class="container-3">
+            <div class="number">04</div>
+            <div class="first-line-container">
+              <div class="heading"><h1>DELIVERING SERVICES</h1></div>
+            </div>
+            <div class="main-text">
+              <p>
+                It makes the ordering process faster and easier. Before, people
+                had to make calls to place orders and drive to the restaurants
+                for a take-out. All of which can be quite time-consuming to do.
+                What's worse than waiting on the phone is they might make a lot
+                of mistakes on your order. Instead of getting what you ordered,
+                you'll get something else entirely. With online delivery
+                systems, companies and customers won't have a hard time ordering
+                because everything is automated. Having an online ordering
+                system, be it an app or a website, that people can access any
+                time of the day can really help streamline the ordering process.
+                More than that, the process becomes more seamless as it offers
+                better customer service for everyone.
+              </p>
+              <div class="image-box">
+                <img src="images/online-education.jpg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="first-page">
+          <div class="container">
+            <div class="first-line-container">
+              <div class="heading"><h1>PRODUCTIVITY</h1></div>
+            </div>
+            <div class="number">05</div>
+            <div class="main-text">
+              <div class="image-box">
+                <img src="images/online-education.jpg" />
+              </div>
+              <p style="padding: 2rem 2rem 2rem 10rem">
+                Many successful businesses use applications for streamlining
+                complex workflows and processes. They have features that ease
+                repetitive and time-consuming tasks. These include activities
+                such as collecting and sorting information or paying bills. From
+                marketing to operations, there are many business automation
+                tools that can make things run more efficiently. <br />Since
+                technology can take over a lot of other tasks, your team can
+                concentrate more and have longer periods of uninterrupted work.
+                That primarily enables them to become more productive.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="second-page">
+          <div class="container-1">
+            <div class="first-line-container">
+              <div class="heading"><h1>COMMUNICATION</h1></div>
+            </div>
+            <div class="number">06</div>
+            <div class="main-text">
+              <div class="image-box">
+                <img src="images/online-education.jpg" />
+              </div>
+              <p style="padding-top: 2rem; padding-bottom: 2rem; line-height: 2.3rem;">
+                The impact of the Internet on communication is immense. First
+                and foremost, the Internet has made communication faster and
+                more efficient. Email, instant messaging, and social media
+                platforms like Facebook and Twitter have all but replaced
+                traditional letter writing, telephone calls, and face-to-face
+                conversations as the primary means of communication. In
+                addition. <br>The Internet has made it possible to communicate with
+                people all over the world, breaking down geographical barriers
+                and bringing people closer together.
+              </p>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer">
+        <div class="inha-emblem">
+          <a href="https://inha.uz/"><span class="inha-link"></span></a
+          ><object data="images/emblem.svg" type=""></object>
+        </div>
+        <div class="footer-text">
+          <p>
+            Academic English Project made by students of Inha University in
+            Tashkent
+          </p>
+        </div>
+        <div class="social-media">
+          <span class="youtube-logo"
+            ><a href="https://www.youtube.com/@InhaUz"
+              ><i class="fa-brands fa-youtube" style="color: #f50000"></i></a
+          ></span>
+          <span class="facebook"
+            ><a href="https://www.facebook.com/inha.uz"
+              ><i class="fa-brands fa-facebook" style="color: #0f4299"></i></a
+          ></span>
+          <span class="telegram"
+            ><a href="https://t.me/inha_uz"
+              ><i class="fa-brands fa-telegram" style="color: #3a76df"></i></a
+          ></span>
+          <span class="instagram"
+            ><a href="https://www.instagram.com/inha_tashkent/"
+              ><i class="fa-brands fa-instagram" style="color: #c837ac"></i></a
+          ></span>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/7481444578.js"
