--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="nav-bar">
         <ul>
           <li class="active1"><a href="">Home</a></li>
-          <li><a href="">Benefits</a></li>
+          <li><a href="./benefits.html">Benefits</a></li>
           <li><a href="">Drawbacks</a></li>
           <li><a href="">Solutions</a></li>
         </ul>
