--- a/benefits.html
+++ b/benefits.html
@@ -38,10 +38,10 @@
     <header>
       <div class="nav-bar">
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li class="active"><a href="">Benefits</a></li>
-          <li><a href="">Drawbacks</a></li>
-          <li><a href="">Solutions</a></li>
+          <li><a href="./index.html"><span class="icon"><i class="fas fa-home"></i></span>Home</a></li>
+          <li class="active"><a href=""><span class="icon"><i class="fas fa-check"></i></span>Benefits</a></li>
+          <li><a href=""><span class="icon"><i class="fas fa-times"></i></span>Drawbacks</a></li>
+          <li><a href=""><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a></li>
         </ul>
       </div>
     </header>
@@ -56,7 +56,7 @@
             <div class="number">01</div>
             <div class="main-text">
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/online-education1.jpg" />
               </div>
               <p>
                 Education and learning methods have changed and made them more
@@ -86,7 +86,7 @@
             <div class="number">02</div>
             <div class="main-text">
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/info1.jpg" />
               </div>
               <p>
                 The internet has significantly increased people's access to
@@ -130,7 +130,7 @@
                 allocate your resources to other needs.
               </p>
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/payment1.jpg" />
               </div>
             </div>
           </div>
@@ -160,7 +160,7 @@
                 better customer service for everyone.
               </p>
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/delivering.jpg" />
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
             <div class="number">05</div>
             <div class="main-text">
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/productivity.jpg" />
               </div>
               <p style="padding: 2rem 2rem 2rem 10rem">
                 Many successful businesses use applications for streamlining
@@ -203,7 +203,7 @@
             <div class="number">06</div>
             <div class="main-text">
               <div class="image-box">
-                <img src="images/online-education.jpg" />
+                <img src="images/communication.jpg" />
               </div>
               <p style="padding-top: 2rem; padding-bottom: 2rem; line-height: 2.3rem;">
                 The impact of the Internet on communication is immense. First
