--- a/index.html
+++ b/index.html
@@ -32,10 +32,27 @@
     <header>
       <div class="nav-bar">
         <ul>
-          <li class="active1"><a href="">Home</a></li>
-          <li><a href="./benefits.html">Benefits</a></li>
-          <li><a href="">Drawbacks</a></li>
-          <li><a href="">Solutions</a></li>
+          <li class="active" style="background-color: #2c405287">
+            <a href="./index.html"
+              ><span class="icon"><i class="fas fa-home"></i></span>Home</a
+            >
+          </li>
+          <li>
+            <a href="./benefits.html"
+              ><span class="icon"><i class="fas fa-check"></i></span>Benefits</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><span class="icon"><i class="fas fa-times"></i></span
+              >Drawbacks</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a
+            >
+          </li>
         </ul>
       </div>
     </header>
