--- a/benefits.html
+++ b/benefits.html
@@ -37,6 +37,7 @@
   <body>
     <header>
       <div class="nav-bar">
+        <span class="logo"><object data="/images/logotechnat.svg" type=""></object></span>
         <ul>
           <li><a href="./index.html"><span class="icon"><i class="fas fa-home"></i></span>Home</a></li>
           <li class="active"><a href=""><span class="icon"><i class="fas fa-check"></i></span>Benefits</a></li>
@@ -228,6 +229,7 @@
           ><object data="images/emblem.svg" type=""></object>
         </div>
         <div class="footer-text">
+          <span class="logo1"><object data="/images/logotechnat_footer.svg" type=""></object></span>
           <p>
             Academic English Project made by students of Inha University in
             Tashkent
