--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <body>
     <header>
       <div class="nav-bar">
+        <span class="logo"><object data="/images/logotechnat.svg" type=""></object></span>
         <ul>
           <li class="active" style="background-color: #2c405287">
             <a href="./index.html"
@@ -342,6 +343,7 @@
           ><object data="images/emblem.svg" type=""></object>
         </div>
         <div class="footer-text">
+          <span class="logo1"><object data="/images/logotechnat_footer.svg" type=""></object></span>
           <p>
             Academic English Project made by students of Inha University in
             Tashkent
