--- a/benefits.html
+++ b/benefits.html
@@ -37,17 +37,50 @@
   <body>
     <header>
       <div class="nav-bar">
-        <span class="logo"><object data="/images/logotechnat.svg" type=""></object></span>
+        <span class="logo"
+          ><object data="/images/logotechnat.svg" type=""></object
+        ></span>
         <ul>
-          <li><a href="./index.html"><span class="icon"><i class="fas fa-home"></i></span>Home</a></li>
-          <li class="active"><a href=""><span class="icon"><i class="fas fa-check"></i></span>Benefits</a></li>
-          <li><a href=""><span class="icon"><i class="fas fa-times"></i></span>Drawbacks</a></li>
-          <li><a href=""><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a></li>
+          <li>
+            <a href="./index.html"
+              ><span class="icon"><i class="fas fa-home"></i></span>Home</a
+            >
+          </li>
+          <li class="active">
+            <a href=""
+              ><span class="icon"><i class="fas fa-check"></i></span>Benefits</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><span class="icon"><i class="fas fa-times"></i></span
+              >Drawbacks</a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a
+            >
+          </li>
         </ul>
       </div>
     </header>
 
     <main>
+      <section>
+        <div class="intro">
+          <div class="intro-text">
+            <h1 class="line1">THE</h1>
+            <h1 class="line2">BENEFITS OF IT</h1>
+            <div class="line3-container">
+              <h1 class="line3">ADVANCEMENT</h1>
+            </div>
+            
+          </div>
+          <div class="intro-img"><img src="/images/intro_black.jpg" alt="" /></div>
+        </div>
+      </section>
+
       <section>
         <div class="first-page">
           <div class="container">
@@ -206,16 +239,22 @@
               <div class="image-box">
                 <img src="images/communication.jpg" />
               </div>
-              <p style="padding-top: 2rem; padding-bottom: 2rem; line-height: 2.3rem;">
+              <p
+                style="
+                  padding-top: 2rem;
+                  padding-bottom: 2rem;
+                  line-height: 2.3rem;
+                "
+              >
                 The impact of the Internet on communication is immense. First
                 and foremost, the Internet has made communication faster and
                 more efficient. Email, instant messaging, and social media
                 platforms like Facebook and Twitter have all but replaced
                 traditional letter writing, telephone calls, and face-to-face
                 conversations as the primary means of communication. In
-                addition. <br>The Internet has made it possible to communicate with
-                people all over the world, breaking down geographical barriers
-                and bringing people closer together.
+                addition. <br />The Internet has made it possible to communicate
+                with people all over the world, breaking down geographical
+                barriers and bringing people closer together.
               </p>
             </div>
           </div>
@@ -229,7 +268,9 @@
           ><object data="images/emblem.svg" type=""></object>
         </div>
         <div class="footer-text">
-          <span class="logo1"><object data="/images/logotechnat_footer.svg" type=""></object></span>
+          <span class="logo1"
+            ><object data="/images/logotechnat_footer.svg" type=""></object
+          ></span>
           <p>
             Academic English Project made by students of Inha University in
             Tashkent
