--- a/benefits.html
+++ b/benefits.html
@@ -47,12 +47,12 @@
             >
           </li>
           <li class="active">
-            <a href=""
+            <a href="./benefits.html"
               ><span class="icon"><i class="fas fa-check"></i></span>Benefits</a
             >
           </li>
           <li>
-            <a href=""
+            <a href="./drawbacks.html"
               ><span class="icon"><i class="fas fa-times"></i></span
               >Drawbacks</a
             >
