--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >
           </li>
           <li>
-            <a href=""
+            <a href="./drawbacks.html"
               ><span class="icon"><i class="fas fa-times"></i></span
               >Drawbacks</a
             >
