--- a/benefits.html
+++ b/benefits.html
@@ -77,7 +77,7 @@
             </div>
             
           </div>
-          <div class="intro-img"><img src="/images/intro_black.jpg" alt="" /></div>
+          <div class="intro-img"><img src="images/intro_black.jpg" alt="" /></div>
         </div>
       </section>
 
