--- a/drawbacks.html
+++ b/drawbacks.html
@@ -38,7 +38,7 @@
     <header>
       <div class="nav-bar">
         <span class="logo"
-          ><object data="/images/logotechnat.svg" type=""></object
+          ><object data="images/logotechnat.svg" type=""></object
         ></span>
         <ul>
           <li>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="intro-img">
-            <img src="/images/intro_black.jpg" alt="" />
+            <img src="images/intro_black.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -270,7 +270,7 @@
         </div>
         <div class="footer-text">
           <span class="logo1"
-            ><object data="/images/logotechnat_footer.svg" type=""></object
+            ><object data="images/logotechnat_footer.svg" type=""></object
           ></span>
           <p>
             Academic English Project made by students of Inha University in
