--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header>
       <div class="nav-bar">
-        <span class="logo"><object data="/images/logotechnat.svg" type=""></object></span>
+        <span class="logo"><object data="images/logotechnat.svg" type=""></object></span>
         <ul>
           <li class="active" style="background-color: #2c405287">
             <a href="./index.html"
@@ -60,7 +60,7 @@
     <main>
       <section class="first-page">
         <div class="image-box">
-          <img src="images\techiseverywhere.jpg" alt="" />
+          <img src="images/techiseverywhere.jpg" alt="" />
           <div class="first-page-text">
             <h1>
               The effects of Information Technologies<br />on modern world
@@ -343,7 +343,7 @@
           ><object data="images/emblem.svg" type=""></object>
         </div>
         <div class="footer-text">
-          <span class="logo1"><object data="/images/logotechnat_footer.svg" type=""></object></span>
+          <span class="logo1"><object data="images/logotechnat_footer.svg" type=""></object></span>
           <p>
             Academic English Project made by students of Inha University in
             Tashkent
