--- a/drawbacks.html
+++ b/drawbacks.html
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="intro-img">
-            <img src="images/intro_black.jpg" alt="" />
+            <img src="images/intro_drawbacks4.png" alt="" />
           </div>
         </div>
       </section>
