Update links and positions in HTML and CSS files

--- a/benefits.html
+++ b/benefits.html
@@ -58,7 +58,7 @@
             >
           </li>
           <li>
-            <a href=""
+            <a href="./solutions.html"
               ><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a
             >
           </li>
