--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             >
           </li>
           <li>
-            <a href=""
+            <a href="./solutions.html"
               ><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a
             >
           </li>
@@ -236,7 +236,7 @@
               </div>
               <div class="text-container fade">
                 <h1 style="font-size: 40px">Ibraxim Azimov</h1>
-                <h1>Interviewer</h1>
+                <h1>Tester</h1>
                 <i
                   class="material-icons"
                   style="font-size: 60px; color: rgb(172, 223, 159)"
@@ -293,11 +293,11 @@
               </div>
               <div class="text-container fade">
                 <h1 style="font-size: 40px">Jasur Ahmedov</h1>
-                <h1>Researcher</h1>
+                <h1>Tester</h1>
                 <i
                   class="material-icons"
                   style="font-size: 60px; color: rgb(255, 213, 146)"
-                  >person_search</i
+                  >bug_report</i
                 >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -312,11 +312,11 @@
               </div>
               <div class="text-container fade">
                 <h1 style="font-size: 40px">Sevinch Ahmedova</h1>
-                <h1>Video Editor</h1>
+                <h1>Researcher</h1>
                 <i
                   class="material-icons"
                   style="font-size: 60px; color: rgb(255, 146, 146)"
-                  >video_library</i
+                  >person_search</i
                 >
               </div>
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
