--- a/drawbacks.html
+++ b/drawbacks.html
@@ -58,7 +58,7 @@
             >
           </li>
           <li>
-            <a href=""
+            <a href="./solutions.html"
               ><span class="icon"><i class="fas fa-cogs"></i></span>Solutions</a
             >
           </li>
